--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "snow-fall",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "type": "commonjs",
   "repository": "https://github.com/ahmetilhan24/snow-fall.git",
   "author": "Ahmet ilhan <ahmetilhan.dev@gmail.com>",
   "license": "MIT",
