--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "snow-fall",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "commonjs",
+  "type": "module",
+  "keywords": [
+    "snow",
+    "fall",
+    "snowfall",
+    "snow-fall",
+    "snowfall.js",
+    "snow-fall.js",
+    "website-snow-fall",
+    "website-snowfall",
+    "website-winter-effect"
+  ],
   "repository": "https://github.com/ahmetilhan24/snow-fall.git",
   "author": "Ahmet ilhan <ahmetilhan.dev@gmail.com>",
   "license": "MIT",
