--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snow-fall",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "module",
+  "type": "commonjs",
   "keywords": [
     "snow",
     "fall",
@@ -20,7 +20,10 @@
   "private": false,
   "description": "snowfall effect script for website",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "typescript": "4.7.4"
   },
   "scripts": {
     "build": "tsc --watch"
