--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "4.7.4"
   },
   "scripts": {
-    "build": "tsc --watch"
+    "build": "npx eslint . && tsc",
+    "build:watch": "tsc --watch"
   }
 }
