--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snow-fall-effect",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "commonjs",
+  "type": "module",
   "keywords": [
     "snow",
     "fall",
