--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snow-fall-effect",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "type": "module",
   "keywords": [
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
+    "eslint": "8.27.0",
     "typescript": "4.7.4"
   },
   "scripts": {
