--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "snow-fall-effect",
   "version": "1.0.1",
   "main": "dist/index.js",
-  "type": "module",
   "keywords": [
     "snow",
     "fall",
@@ -19,14 +18,18 @@
   "license": "MIT",
   "private": false,
   "description": "snowfall effect script for website",
+  "scripts": {
+    "build": "webpack",
+    "build:watch": "tsc --watch"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "8.27.0",
-    "typescript": "4.7.4"
-  },
-  "scripts": {
-    "build": "npx eslint . && tsc",
-    "build:watch": "tsc --watch"
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
